# habit-homepage

./: .env.example  .gitignore  Makefile  habit.db  pyproject.toml
.claude/: settings.local.json
habit_homepage/: main.py
habit_homepage/adapters/api/: analytics_routes.py  daily_log_routes.py  dashboard_routes.py  exception_handlers.py  goal_routes.py  habit_routes.py
habit_homepage/adapters/providers/garmin/: provider.py
habit_homepage/adapters/providers/github/: provider.py
habit_homepage/adapters/repositories/sqlite/: category_repo.py  daily_log_repo.py  goal_repo.py  habit_repo.py
habit_homepage/application/: analytics_service.py  daily_log_service.py  goal_service.py  habit_service.py
habit_homepage/config/: cache.py  logging.py  settings.py
habit_homepage/domain/: category.py  daily_log.py  exceptions.py  goal.py  habit.py  habit_definitions.py  habit_entry.py  value_objects.py
habit_homepage/ports/providers/: habit_data_provider.py
habit_homepage/ports/repositories/: category_repo.py  daily_log_repo.py  goal_repo.py  habit_repo.py
tests/adapters/garmin/: test_provider.py
tests/application/: test_daily_log_service.py
